--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
                         <li><a href="sustainability.html">Sustainability</a></li>
                         <li><a href="blog.html" class="active">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#" class="cart-icon" aria-label="Shopping cart"><span
+                        <li><a href="cart.html" class="cart-icon" aria-label="Shopping cart"><span
                                     class="cart-count">0</span></a></li>
                     </ul>
                 </div>
