--- a/sustainability.html
+++ b/sustainability.html
@@ -35,7 +35,7 @@
                         <li><a href="sustainability.html" class="active">Sustainability</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#" class="cart-icon" aria-label="Shopping cart"><span
+                        <li><a href="cart.html" class="cart-icon" aria-label="Shopping cart"><span
                                     class="cart-count">0</span></a></li>
                     </ul>
                 </div>
@@ -329,7 +329,7 @@
                 </div>
                 <div class="footer-col">
                     <h4>Contact Info</h4>
-                    <p>📍 Mummidivaram, East Godavari<br>Andhra Pradesh, India</p>
+                    <p>📍 Pappulavaripalem, East Godavari<br>Andhra Pradesh, India</p>
                     <p>📞 +91 XXXXX XXXXX</p>
                     <p>✉️ info@konaseemacoconutoil.com</p>
                 </div>
