--- a/cart.html
+++ b/cart.html
@@ -18,8 +18,9 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <div class="logo">
-                        <img src="coconut-oil-logo.avif" alt="Pure Heritage Logo">
-                        <span>Pure Heritage</span>
+                        <img src="https://thumbs.dreamstime.com/b/coconut-oil-logo-nature-product-coconut-oil-emblem-ripe-coco-half-coconut-leaves-letters-engraving-style-coconut-oil-155995416.jpg"
+                            alt="Konaseema Organic Coconut Oil Logo">
+                        <span>Konaseema Agro Products</span>
                     </div>
                     <button class="mobile-menu-toggle" aria-label="Toggle menu">
                         <span></span>
