--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <div class="logo">
-                        <img src="../../../Angular Projects/Konaseema Coconut/coconut-oil-logo.avif"
+                        <img src="https://thumbs.dreamstime.com/b/coconut-oil-logo-nature-product-coconut-oil-emblem-ripe-coco-half-coconut-leaves-letters-engraving-style-coconut-oil-155995416.jpg"
                             alt="Konaseema Organic Coconut Oil Logo">
                         <span>Konaseema Agro Products</span>
                     </div>
@@ -238,7 +238,7 @@
             <h2>Experience the Konaseema Journey</h2>
             <p>From our coconut groves to your home - witness the purity of our process</p>
             <div class="video-container">
-                <img src="https://tiimg.tistatic.com/fp/1/009/190/cold-pressed-coconut-oil-446.jpg"
+                <img src="https://thumbs.dreamstime.com/b/coconut-oil-logo-nature-product-coconut-oil-emblem-ripe-coco-half-coconut-leaves-letters-engraving-style-coconut-oil-155995416.jpg"
                     alt="Konaseema Coconut Oil Production" loading="lazy">
             </div>
         </div>
