--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <div class="logo">
-                        <img src="../../../Angular Projects/Konaseema Coconut/coconut-oil-logo.avif"
+                        <img src="https://thumbs.dreamstime.com/b/coconut-oil-logo-nature-product-coconut-oil-emblem-ripe-coco-half-coconut-leaves-letters-engraving-style-coconut-oil-155995416.jpg"
                             alt="Konaseema Organic Coconut Oil Logo">
                         <span>Konaseema Agro Products</span>
                     </div>
